<resources>
    <string name="app_name">猫咪云直播</string>
    <string name="givepcamerapermission">请赋予摄像头权限</string>
    <string name="giverecordpermission">请赋予录音权限</string>
    <string name="givewritepermission">请赋予读写权限</string>
    <string name="title">猫咪云直播</string>
    <string name="living">直播中</string>
    <string name="lived">未直播</string>
    <string name="alllive">全部直播</string>
    <string name="home">主页</string>
    <string name="beginlive">我要直播</string>
    <string name="my">我的</string>
    <string name="title_activity_login">Sign in</string>

    <string name="Tologin">马上登陆</string>
    <string name="notLogin">你还没有登录哦~</string>
    <string name="accountID">云播号：</string>
    <string name="lived_count">直播:0</string>
    <string name="fav_count">粉丝:0</string>
    <string name="fans_count">关注:0</string>
    <string name="yuan">元</string>
    <string name="money">收益</string>
    <string name="grade">等级</string>
    <string name="ji">级</string>
    <string name="setting">设置</string>
    <string name="login">登录</string>
    <string name="registe">注册</string>
    <string name="account_login">账户登录</string>
    <string name="quick_login">快速登录</string>
    <string name="getValidateCode">获取验证码</string>
    <string name="name_email_phoneNum">用户名/邮箱/手机号</string>
    <string name="userName">用户名</string>
    <string name="pwd">密码</string>
    <string name="repwd">确认密码</string>
    <string name="verify_code">验证码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="thrid_login">也可以使用下面的第三方登陆</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="qq">腾讯QQ</string>
    <string name="weixin">微信</string>
    <string name="usernameNotEmpty">用户名不能为空</string>
    <string name="pwdNotEmpty">密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="pwd_name_erro">用户名或密码错误</string>
    <string name="internet_erro">网络错误</string>
    <string name="pwdNotSame">两次密码不相同</string>
    <string name="reg_success">注册成功</string>
    <string name="userNameIsExist">用户名已存在</string>
    <string name="load_more">上拉加载更多</string>


</resources>
