<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.catlivevideo.living.catlivevideo.LoginActivity"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg_n"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_activate_bg"
            android:drawableLeft="@mipmap/back"
            android:gravity="center_vertical"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />
        <View
            android:layout_width="0.5dp"
            android:layout_height="20dp"
            android:background="#ffffffff"
             />

        <TextView
            android:id="@+id/registe_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registe"
            android:textColor="@color/white"
            android:padding="5dp"
            android:background="@drawable/btn_activate_bg"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_login"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:text="@string/account_login"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/account_login"
            android:layout_weight="1"
            android:button="@null"
            android:textSize="20sp"
            android:checked="true"
            android:textColor="@color/radio_btn_selector"/>

        <RadioButton
            android:text="@string/quick_login"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/quick_login"
            android:layout_weight="1"
            android:textSize="20sp"
            android:button="@null"
            android:textColor="@color/radio_btn_selector"
            />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <View
            android:text="TextView"
            android:layout_width="280dp"
            android:layout_height="2dp"
            android:background="@color/gray" />

        <View
            android:id="@+id/flyView"
            android:layout_width="140dp"
            android:layout_height="4dp"
            android:background="@color/orange"

            />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_corners"
        android:padding="5dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/userName"
            android:textSize="15sp"
            android:hint="@string/name_email_phoneNum"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_bg"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:maxLines="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_margin="5dp"
           >

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_bg"
            android:hint="@string/pwd"
            android:maxLines="1"
            android:padding="15dp"/>

        <Button
            android:id="@+id/verify_btn"
            android:text="@string/getValidateCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/orange"
            android:background="@drawable/btn_quick_register_bg_selector"
            android:textSize="15sp"
            android:visibility="gone"
            />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_selector"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/login"
        android:layout_margin="10dp"
        android:enabled="false"
        />
    <TextView
        android:id="@+id/forget_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forget_pwd"
        android:gravity="right"
        android:textColor="@color/orange"
        android:layout_margin="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thrid_login"
        android:gravity="center"
        android:textColor="#ff000000"
        android:layout_margin="10dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/mine_a"
        android:id="@+id/imageView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp">


        <TextView
            android:id="@+id/sina_weibo"
            android:text="@string/sina_weibo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/sina_logo"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ff000000"/>

        <TextView
            android:id="@+id/qq"
            android:text="@string/qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/qq_logo"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ff000000" />
        <TextView
            android:id="@+id/weixin"
            android:text="@string/weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@mipmap/weixin_logo"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#ff000000" />
    </LinearLayout>



</LinearLayout>
