<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity" >
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg_n"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/title"
            android:textSize="24sp"
            android:textColor="@color/white" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/loading_progress"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <RadioGroup
        android:id="@+id/top_select_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_below="@id/top_bar">

        <RadioButton
            android:id="@+id/living"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_living"
            android:textColor="@color/top_text_color"
            android:text="@string/living" />

        <RadioButton
            android:id="@+id/lived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_lived"
            android:textColor="@color/top_text_color"
            android:text="@string/lived" />

        <RadioButton
            android:id="@+id/alllive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:drawableTop="@drawable/ic_tab_alllive"
            android:textColor="@color/top_text_color"
            android:text="@string/alllive"
            android:checked="true"/>

    </RadioGroup>



    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_tab_home"
            android:text="@string/home"
            android:textColor="@color/bottom_text_color"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/beginlive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_tab_beginlive"
            android:text="@string/beginlive"
            android:textColor="@color/bottom_text_color"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:id="@+id/my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_tab_my"
            android:text="@string/my"
            android:textColor="@color/bottom_text_color"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="bottom" />
    </LinearLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_select_bar"
        android:layout_above="@id/bottom_bar"
        >
    </android.support.v4.view.ViewPager>
</RelativeLayout>