<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.catlivevideo.living.catlivevideo.RegisteActivity"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg_n"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/reg_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_activate_bg"
            android:drawableLeft="@mipmap/back"
            android:gravity="center_vertical"
            android:text="@string/registe"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_corners"
        android:padding="5dp">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="15sp"
            android:hint="@string/userName"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_bg"
            android:layout_margin="5dp"
            android:padding="15dp"
            android:maxLines="1" />



            <EditText
                android:id="@+id/pwd"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_weight="1"
                android:textSize="15sp"
                android:textColor="@color/gray"
                android:textColorHint="@color/gray"
                android:background="@drawable/edittext_bg"
                android:hint="@string/pwd"
                android:maxLines="1"
                android:padding="15dp"/>
        <EditText
            android:id="@+id/re_pwd"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="15sp"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_bg"
            android:hint="@string/repwd"
            android:maxLines="1"
            android:padding="15dp"/>
    </LinearLayout>
    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_btn_selector"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/registe"
        android:layout_margin="10dp"
        />

</LinearLayout>
