<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_white"
    tools:context="com.catlivevideo.living.catlivevideo.MyActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_bg_n"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/my_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_activate_bg"
            android:drawableLeft="@mipmap/back"
            android:gravity="center_vertical"
            android:text="@string/my"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight= "1" />

        <ImageView
            android:id="@+id/my_refresh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/btn_activate_bg"
            android:padding="10dp"
            android:src="@mipmap/refresh_btn" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/delivery_address_item_bg"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">
       <ImageView
           android:id="@+id/user_icon"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@mipmap/user_icon"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp">
            <TextView
                android:id="@+id/userName"
                android:text="name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#696969"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:text="@string/accountID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#696969"/>
            <TextView
                android:id="@+id/accountID"
                android:text="231542136"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#696969"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_right_my"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:padding="5dp">
        <Button
            android:id="@+id/lived_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/ticket"
            android:text="@string/lived_count"
            android:textColor="#FF000000" />

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#50000000"/>
        <Button
            android:id="@+id/fans_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/collection_icon"
            android:text="@string/fans_count"
            android:textColor="#FF000000"/>
        <TextView
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="#50000000"/>
        <Button
            android:id="@+id/fav_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@mipmap/recent_view"
            android:text="@string/fav_count"
            android:textColor="#FF000000"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/listview_item_selector"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/money"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textColor="#ff000000"
                />
            <TextView
                android:id="@+id/money_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/orange_bg"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:gravity="center"
                android:textColor="#ff000000" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_right_my"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/line_horizontal"
           />

        <LinearLayout
            android:id="@+id/grade"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/listview_item_selector"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/grade"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textColor="#ff000000"
                />

            <TextView
                android:id="@+id/grade_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/orange_bg"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ji"
                android:gravity="center"
                android:textColor="#ff000000" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_right_my"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/line_horizontal"
            />

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="center"
            android:background="@drawable/listview_item_selector"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/setting"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:textColor="#ff000000"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/arrow_right_my"/>

        </LinearLayout>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/line_horizontal"
            />
         </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
